force-app/main/default/objects/SFW_File_Placement__c/SFW_File_Placement__c.object-meta.xml
<CustomObject>
<description
    >Maps ContentDocument records into virtual folders.</description>
<enableFeeds>false</enableFeeds><enableHistory
    >true</enableHistory><enableReports>true</enableReports>
    <label>File Placement</label><nameField><displayFormat>FP-{000000}</displayFormat><label
        >Placement Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>File Placements</pluralLabel><sharingModel>ControlledByParent</sharingModel>
</CustomObject>