force-app/main/default/objects/SFW_File_Placement__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName><externalId>false</externalId><label>Content Document Id</label><length
    >18</length><required>true</required><type>Text</type><unique>false</unique>
</CustomField>