force-app/main/default/objects/SFW_File_Placement__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName><label>Folder</label>
    <referenceTo>SFW_Folder__c</referenceTo><relationshipLabel>File Placements</relationshipLabel><relationshipName
    >File_Placements</relationshipName><type>MasterDetail</type>
</CustomField>