force-app/main/default/objects/SFW_File_Placement__c/fields/Is_Favorite__c.field-meta.xml
<CustomField>
    <fullName>Is_Favorite__c</fullName><defaultValue>false</defaultValue><label>Favorite</label><type>Checkbox</type>
</CustomField>